--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ logstash-7.5.2/logstash-core-plugin-api/
 logstash-7.5.2/modules/
 logstash-7.5.2/tools/
 logstash-7.5.2/vendor/
+logstash-7.5.2/x-pack/
 logstash-7.5.2/CONTRIBUTORS
 logstash-7.5.2/Gemfile
 logstash-7.5.2/Gemfile.lock
