--- a/pipelines/logstash-cars.conf
+++ b/pipelines/logstash-cars.conf
@@ -2,7 +2,7 @@ input {
 
 file {
 
-path => "cars.csv"
+path => "/home/chris/Training/ELKMasterClass/data/cars.csv"
 start_position => "beginning"
 sincedb_path => "/dev/null"
 
